--- a/.github/workflows/make-verichecks-status.yml
+++ b/.github/workflows/make-verichecks-status.yml
@@ -22,7 +22,7 @@ jobs:
     - name: install-dafny
       run: tools/install-dafny.sh
     - name: make status
-      run: make -j `nproc` status
+      run: make -j 7 verichecks-status
     - uses: actions/upload-artifact@v2
       with:
         name: build
