--- a/.github/workflows/make-verichecks-status.yml
+++ b/.github/workflows/make-verichecks-status.yml
@@ -30,6 +30,13 @@ jobs:
       with:
         name: build
         path: build
+    - name: publish to wiki
+      uses: SwiftDocOrg/github-wiki-publish-action@1.0.0
+      with:
+        path: build
+      env:
+        GH_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
     - name: stop veri-checks
       if: ${{ always() }}
+      continue-on-error: true # This step will always fail, since it gets killed when we shutdown
       run: sudo shutdown --poweroff now
