--- a/.github/workflows/make-syntax-status.yml
+++ b/.github/workflows/make-syntax-status.yml
@@ -17,12 +17,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: ${{ github.event.inputs.branch }}
-    - name: prep-environment
-      run: sudo tools/prep-environment.sh
-    - name: install-dafny
-      run: tools/install-dafny.sh
-    - name: make syntax-status
-      run: make -j `nproc` syntax-status
+    - name: dummy test
+      run: mkdir -p build/foo
     - name: publish to wiki
       env:
         GH_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
