--- a/.github/workflows/make-verichecks-status.yml
+++ b/.github/workflows/make-verichecks-status.yml
@@ -38,7 +38,7 @@ jobs:
         env:
           GH_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
         run: tools/verichecks-to-wiki.sh
-      - name: detect success
+      - name: detect verification outcome
         run: grep -l Overall:\ Success build/Impl/Bundle.i.verified
   stop-veri-checks:
     runs-on: bastion
