fix bug in new shutdown approach

--- a/.github/workflows/make-syntax-status.yml
+++ b/.github/workflows/make-syntax-status.yml
@@ -40,6 +40,7 @@ jobs:
         run: tools/verichecks-to-wiki.sh
   stop-veri-checks:
     runs-on: bastion
+    needs: build
     steps:
       - name: stop-veri-checks
         if: ${{ always() }}
