maybe fix the links in the wiki uploader, and don't rely on the script being executable

--- a/.github/workflows/make-syntax-status.yml
+++ b/.github/workflows/make-syntax-status.yml
@@ -34,7 +34,7 @@ jobs:
       - name: publish to wiki
         env:
           GH_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-        run: tools/verichecks-to-wiki.sh
+        run: bash tools/verichecks-to-wiki.sh
   stop-veri-checks:
     runs-on: bastion
     needs: build
