Small improvements to C++ harness.

--- a/concurrency/node-replication/Makefile
+++ b/concurrency/node-replication/Makefile
@@ -1,5 +1,13 @@
 all: app
 
+CFLAGS := -g -O1 -std=c++17 \
+	-I ../../.dafny/dafny/Binaries/ -I ../framework/
+
+SRC := \
+	../framework/Extern.h \
+	../framework/LinearExtern.h \
+	Bundle.i.cpp
+
 Bundle.i.cpp: *.dfy rwlock/*.dfy ../framework/*.dfy ../../lib/Base/*.dfy
 	$(eval TMPNAME=$(abspath $(patsubst %.s.cs,%-s.cs,$(patsubst %.i.cs,%-i.cs,$@))))
 	# Dafny currently produces Bundle.i.cpp, but it returns an error code
@@ -8,11 +16,11 @@ Bundle.i.cpp: *.dfy rwlock/*.dfy ../framework/*.dfy ../../lib/Base/*.dfy
 	-dafny /trace /compile:0 /induction:1 /noNLarith /noVerify /spillTargetCode:3 /compileTarget:cpp /countVerificationErrors:0 Bundle.i.dfy Extern.h LinearExtern.h /out:$(TMPNAME)
 	-mv $(TMPNAME) $@
 
-Bundle.o: Bundle.i.cpp ../framework/Extern.h ../framework/LinearExtern.h
-	g++ -g -c -o Bundle.o Bundle.i.cpp -I ../../.dafny/dafny/Binaries/ -I ../framework/ -std=c++17 -O2
+Bundle.o: $(SRC)
+	g++ $(CFLAGS) -c -o Bundle.o Bundle.i.cpp
 
-main.o: main.cpp ../framework/Extern.h ../framework/LinearExtern.h Bundle.i.cpp
-	g++ -g -c -o main.o main.cpp -I ../../.dafny/dafny/Binaries/ -I ../framework/ -std=c++17 -O2
+main.o: main.cpp $(SRC)
+	g++ $(CFLAGS) -c -o main.o main.cpp
 
 app: main.o Bundle.o
 	g++ -g -o app Bundle.o main.o -lpthread
