--- a/concurrency/node-replication/vspace/Cargo.toml
+++ b/concurrency/node-replication/vspace/Cargo.toml
@@ -3,6 +3,10 @@ name = "vspace"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "vspace"
+crate-type = ["staticlib", "rlib"]
+
 [dependencies]
 x86 = "0.43"
 log = "0.4"
