--- a/concurrency/node-replication/vspace/Cargo.toml
+++ b/concurrency/node-replication/vspace/Cargo.toml
@@ -13,6 +13,8 @@ log = "0.4"
 cxx = "1.0"
 env_logger = "*"
 node-replication = "0.1.1"
+mmap = "0.1.*"
+libc = "0.2"
 
 [build-dependencies]
 cxx-build = "1.0"
