Tweaks to get benchmarks compiling with lseq changes.

--- a/concurrency/node-replication/Makefile
+++ b/concurrency/node-replication/Makefile
@@ -57,7 +57,7 @@ $(BUNDLE_CPP) $(BUNDLE_H): *.dfy rwlock/*.dfy ../framework/*.dfy ../../lib/Base/
 	# Dafny currently produces Bundle$(DATA_STRUCTURE_NAME).i.cpp, but it returns an error code
 	# since not everything verifies. Augment the next lines so that they don't
 	# ignore failures once things are supposed to verify.
-	-dafny /trace /compile:0 /induction:1 /noNLarith /noVerify /spillTargetCode:3 /compileTarget:cpp /countVerificationErrors:0 $(BUNDLE_DAFNY) Extern.h LinearExtern.h ./vspace_glue.h /out:$(TMPNAME)
+	-../../tools/local-dafny.sh /trace /compile:0 /induction:1 /noNLarith /noVerify /spillTargetCode:3 /compileTarget:cpp /countVerificationErrors:0 $(BUNDLE_DAFNY) Extern.h LinearExtern.h ./vspace_glue.h /out:$(TMPNAME)
 	-mv $(TMPNAME) $@
 
 ./vspace/target/release/libvspace.a ./vspace/target/cxxbridge/vspace/src/lib.rs.cc ./vspace/target/cxxbridge/vspace/src/lib.rs.h: ./vspace/src/lib.rs ./vspace/Cargo.toml ./vspace/build.rs
